@@ -34,6 +34,8 @@ git-annex (5.20150732) UNRELEASED; urgency=medium
     built using the cryptonite library.
   * Improve Setup.hs file so that cabal copy --destdir works.
     Thanks, Magnus Therning.
+  * metadata: Fix reversion introduced in 5.20150727 that caused display
+    of metadata to not work.
 
  -- Joey Hess <id@joeyh.name>  Fri, 31 Jul 2015 12:31:39 -0400
 
